--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
   <title>Hello Max!</title>
 </head>
 <body>
-<h1> Hello Max Wu! </h1>
+<h1> Hello Max Wu! You are so handsome </h1>
 </body>
 </html>
