--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -22,7 +22,7 @@ p {
   border: 2px solid black;
   margin-bottom: 15px;
   background-color: gray;
-  width: 90%;
+  width: 95%;
   height: 150px;
   margin-right: auto;
   margin-left: auto;
@@ -33,11 +33,10 @@ p {
   width: 100%;
 }
 
-/********** Large devices only **********/
-@media (min-width: 1200px) {
+/********** Browser Window only **********/
+@media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -77,11 +76,10 @@ p {
   }
 }
 
-/********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
+/********** Tablet View only **********/
+@media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-md-1 {
     width: 8.33%;
@@ -121,6 +119,49 @@ p {
   }
 }
 
+/********** Mobile View only **********/
+@media (max-width: 767px) {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+    float: left;
+  }
+  .col-sm-1 {
+    width: 8.33%;
+  }
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-5 {
+    width: 41.66%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33%;
+  }
+  .col-sm-8 {
+    width: 66.66%;
+  }
+  .col-sm-9 {
+    width: 74.99%;
+  }
+  .col-sm-10 {
+    width: 83.33%;
+  }
+  .col-sm-11 {
+    width: 91.66%;
+  }
+  .col-sm-12 {
+    width: 100%;
+  }
+}
+
 </style>
 
 </head>
@@ -128,9 +169,9 @@ p {
 <h1>Our Menu</h1>
 
 <div class="row">
-  <div class="col-lg-3 col-md-6"><p>Chicken</p></div>
-  <div class="col-lg-3 col-md-6"><p>Beef</p></div>
-  <div class="col-lg-3 col-md-6"><p>Sushi</p></div>
+  <div class="col-lg-4 col-md-6 col-sm-12"><p>Chicken</p></div>
+  <div class="col-lg-4 col-md-6 col-sm-12"><p>Beef</p></div>
+  <div class="col-lg-4 col-md-12 col-sm-12"><p>Sushi</p></div>
 </div>
 
 </body>
